# Triangle

./: .gitignore  CMakeLists.txt
lib/glfwApp/: Buffer.cpp  Buffer.h  CMakeLists.txt  Camera.cpp  Camera.h  Instance.cpp  Instance.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  MeshManager.cpp  MeshManager.h  RTMaterial.cpp  RTMaterial.h  RTModel.cpp  RTModel.h  RTScene.cpp  RTScene.h  Shader.cpp  Shader.h  SubMesh.cpp  SubMesh.h  Texture.cpp  Texture.h  TextureManager.cpp  TextureManager.h  Vertex.h  common.h  glfwApp.cpp  glfwApp.h  tiny_obj_loader.cpp
shaders/: CMakeLists.txt  depth.frag  object.frag  object.vert  texbuf.frag
src/: depth.cpp  main.cpp  object.cpp  texbuf.cpp  triangle.cpp  unibuf.cpp  vertbuf.cpp
