set(CMAKE_CXX_STANDARD 17)
find_package(glfw3 CONFIG REQUIRED)
find_package(glm CONFIG REQUIRED)
find_package(Vulkan REQUIRED)

add_library(glfwApp glfwApp.cpp stb_image.h stb_image.cpp tiny_obj_loader.cpp)
target_include_directories(glfwApp PUBLIC "." ${Vulkan_INCLUDE_DIRS})
target_link_libraries(glfwApp PUBLIC glfw)
target_link_libraries(glfwApp PUBLIC glm::glm)
target_link_libraries(glfwApp PUBLIC ${Vulkan_LIBRARIES})